--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "./fonts.scss";
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+}
+
+body {
+	background-color: #141414;
 }
