feat (advancedPlayer) : add advanced player
    ✅ - اضافه کردن فونت جدید
  ✅ - ادعیه و تقشه راه ( عکس نشون داده بشن و لینک به pdf اشون باشن)
  ✅ - یه باکس پوستر مانند که لینک میشه به قسمت های مختلف
    - ثبت اطلاعات ‍کاربر روی سرور برای قسمت نذر جاماندگان
ـ بعد ثبت بهش پیغام موفقیت نشون بده بنویه (نام شما ثبت شد)
  ✅ - بک گراند پلیر (۱۴۱۴۱۴) و صفحه (۲۱۲۱۲۱) تغییر کنند
- از ویدیوها و پادکست‌ها هم فقط 3تا توی صفحه اصلی نمایش داده بشه

fix (donwloader) : add styles

feat (font): add new font

feat(forgotten) : add forgotten component

add see all

add posters

add image to prayers and maps

fix audio player new look

fix head and click

--- a/assets/styles/fonts.scss
+++ b/assets/styles/fonts.scss
@@ -34,4 +34,39 @@
 		src: url("../fonts/IRANSansWeb(FaNum)_Black.woff2");
 		font-weight: 900;
 	}
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-UltraLight.woff2");
+		font-weight: 200;
+	}
+
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-Light.woff2");
+		font-weight: 300;
+	}
+
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-Regular.woff2");
+		font-weight: 400;
+	}
+
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-Medium.woff2");
+		font-weight: 500;
+	}
+
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-Bold.woff2");
+		font-weight: 700;
+	}
+
+	@font-face {
+		font-family: "Ahang";
+		src: url("../fonts/Ahang-Black.woff2");
+		font-weight: 900;
+	}
 }
