feat (BOX) : ADD ISFAHAN Box
feat (404) : add 404 page

feat (svg) : add svg support

feat (nav) : add new logo

feat (footer) : add footer

fix (404) : goes back to login

fix (css) : background color

fix (head) : add new title

remove (imaged) : old images removed

feat (home) : add top image

feat (content) : add basic navigation btns

fix (footer) : is now sticky and is at the end

remove (guides) : remove guide files

fix (content) : fix btns size and style

feat (latestMovies) :  add base latest movies

feat (isfahanBeauty) : add basic beautifull Isfahan

feat (playlist) : add styles

fix (Isfahan) : rename

feat (Isfahan) : add voice of city

feat (podcasts) : add styles

feat (types) : add core types from api

fix (isfahan) : only one row  for videos

feat (slider) : add basic slider

feat (slider) : add ads

feat (slider) : add AutoPlay

feat (slider) : connect to API

feat (advancedPlayer) : starts fullscreen

feat (sliderPlayer) : shows poster on exit of fullscreen

fix slider

return of the play butn

feat (musicPlayer) : fix size

add yarn.lock

fix not showing play on videos

fix hidden play button size

feat add playlist player

fix player to botttom on top of all

add ISFvideo

add ISF voice

add podcasts

fix navbar

fix player

add autoplay to player

fix link to Beautiful_Isfahan

fix isfVoice src

fix playlist space-y

fix left side

fix latest movies left side

fix voice and beauty side

fix podcasts font and style

FIX voice name

fix podcats stylr

fix title for city items

ADD city events

add books

fix some styles

how to set breakpoints for resposive slider

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import "./fonts.scss";
+@import "swiper/css/bundle";
 
 * {
 	padding: 0;
@@ -11,5 +12,14 @@
 }
 
 body {
-	background-color: #212121;
+	background-color: rgb(18, 18, 23);
+}
+
+.plyr--video.plyr--stopped .plyr__controls {
+	display: none;
+}
+
+.plyr--full-ui.plyr--video .plyr__control--overlaid {
+	opacity: 0;
+	transform: scale(10);
 }
