--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -14,3 +14,11 @@
 body {
 	background-color: rgb(18, 18, 23);
 }
+
+.plyr--video.plyr--stopped .plyr__controls {
+	display: none;
+}
+
+.plyr--full-ui.plyr--video .plyr__control--overlaid {
+	display: none !important;
+}
