return of the play butn

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -19,6 +19,6 @@ body {
 	display: none;
 }
 
-.plyr--full-ui.plyr--video .plyr__control--overlaid {
-	display: none !important;
-}
+// .plyr--full-ui.plyr--video .plyr__control--overlaid {
+// 	display: none !important;
+// }
